# python-slapd

./: .gitignore  .readthedocs.yaml  CHANGES.rst  LICENSE.md  README.md  pyproject.toml
.github/workflows/: main.yml
doc/: api.rst  changelog.rst  conf.py  index.rst
slapd/: __init__.py
tests/: test_slapdobject.py
